# WeatherStation

./: .gitignore  AUTHORS  LICENSE  README.md  docker-compose.yml
.github/workflows/: build-checks.yml  deploy.yml
Database/: README.md  backup.sh  docker-compose.yml  restore.sh
Docs/: CodeStyle.md  README.md  sample.env
Embedded/: .clang-format  .gitignore  README.md  platformio.ini
Embedded/include/: PoseidonCore.hpp  PoseidonData.hpp
Embedded/src/: Clock.cpp  Clock.hpp  LightSensor.cpp  LightSensor.hpp  Log.cpp  Log.hpp  Temperature.cpp  Temperature.hpp  WeatherData.cpp  WeatherData.hpp  WeatherStation.cpp
Embedded/src/sensors/: BatteryVoltage.cpp  BatteryVoltage.hpp  Clock.cpp  Clock.hpp  LightSensor.cpp  LightSensor.hpp  Temperature.cpp  Temperature.hpp
MqttMessageParser/: Dockerfile  README.md  go.mod  go.sum  main.go  messageParser.go  model.go  sample.env
MqttMessageParser/model/: model.go
MqttMessageParser/parser/: messageParser.go
RestAPI/: Dockerfile  README.md  go.mod  go.sum  main.go  sample.env
RestAPI/Config/: config.go
RestAPI/Controllers/: controller.go
RestAPI/Models/: fetching.go  model.go
RestAPI/Routes/: routes.go
RestAPI/parser/: messageParser.go
WeatherLogger/: .clang-format  Dockerfile  README.md  SQLTables.md  pom.xml
WebApp/: .eslintignore  .eslintrc.yml  Dockerfile  README.md  package-lock.json  package.json
WebApp/src/: index.html  main.css
WebApp/src/scripts/: app.ts  datafetch.ts  endpoints.ts  env.ts  graph.ts  (+2 more)
resting-api/: Cargo.toml  Dockerfile  README.md  sample.env
resting-api/src/: main.rs
(+26 files in other folders)
