[package]
name = "resting-api"
version = "0.1.0"
authors = ["Heart <heartbrrrrr@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
tokio = { version = "0.2", features = ["macros"] }
postgres = {version = "0.19.1", features = ["with-chrono-0_4"]}
chrono = {version = "0.4.19", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
dotenv = "0.15.0"